@@ -9,8 +9,8 @@ buildscript {
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
         classpath 'com.google.gradle:osdetector-gradle-plugin:1.7.3'
         classpath 'com.github.johnrengelman:shadow:8.1.1'
-        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.6.3'
-        classpath 'com.gradle:gradle-enterprise-gradle-plugin:3.12.4' // added for windows build verification-metadata.xml error
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:3.2.3'
+        classpath 'com.gradle:gradle-enterprise-gradle-plugin:3.16.1' // added for windows build verification-metadata.xml error
     }
 }
 
@@ -31,7 +31,7 @@ configure(subprojects) {
     apply plugin: 'jacoco-report-aggregation'
     apply plugin: 'checkstyle'
 
-    sourceCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_21
 
     ext { // in alphabetical order
         bcVersion = '1.63'
@@ -47,16 +47,16 @@ configure(subprojects) {
         fontawesomefxMaterialdesignfontVersion = '2.0.26-9.1.2'
         grpcVersion = '1.42.1'
         gsonVersion = '2.8.5'
-        guavaVersion = '30.1.1-jre'
-        guiceVersion = '5.1.0'
-        moneroJavaVersion = '0.8.9'
+        guavaVersion = '32.1.1-jre'
+        guiceVersion = '7.0.0'
+        moneroJavaVersion = '0.8.10'
         httpclient5Version = '5.0'
         hamcrestVersion = '2.2'
         httpclientVersion = '4.5.12'
         httpcoreVersion = '4.4.13'
         ioVersion = '2.6'
         jacksonVersion = '2.12.1'
-        javafxVersion = '16'
+        javafxVersion = '21.0.2'
         javaxAnnotationVersion = '1.2'
         jcsvVersion = '1.4.0'
         jetbrainsAnnotationsVersion = '13.0'
@@ -69,8 +69,8 @@ configure(subprojects) {
         langVersion = '3.11'
         logbackVersion = '1.1.11'
         loggingVersion = '1.2'
-        lombokVersion = '1.18.24'
-        mockitoVersion = '5.2.0'
+        lombokVersion = '1.18.30'
+        mockitoVersion = '5.10.0'
         netlayerVersion = '6797461310f077bbea4f43a3a509c077b0ed8c34' // Netlayer version 0.7.3 with Tor browser version 11.0.14 and tor binary version: 0.4.7.7
         protobufVersion = '3.19.1'
         protocVersion = protobufVersion
@@ -169,12 +169,16 @@ configure([project(':cli'),
 
             def unixScriptFile = file("${rootProject.projectDir}/haveno-$applicationName")
             unixScriptFile.text = unixScriptFile.text.replace(
-                'APP_HOME=$( cd "${APP_HOME:-./}.." && pwd -P ) || exit', 'APP_HOME=$( cd "${APP_HOME:-./}" && pwd -P ) || exit')
+                'APP_HOME=$( cd "${APP_HOME:-./}.." > /dev/null && pwd -P ) || exit', 'APP_HOME=$( cd "${APP_HOME:-./}" > /dev/null && pwd -P ) || exit')
 
             if (applicationName == 'desktop') {
                 def script = file("${rootProject.projectDir}/haveno-$applicationName")
                 script.text = script.text.replace(
-                    'DEFAULT_JVM_OPTS=""', 'DEFAULT_JVM_OPTS="-XX:MaxRAM=4g"')
+                'DEFAULT_JVM_OPTS=""', 'DEFAULT_JVM_OPTS="-XX:MaxRAM=4g ' +
+                    '--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED ' +
+                    '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED ' +
+                    '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED ' +
+                    '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED"')
             }
 
             if (applicationName == 'apitest') {
@@ -419,7 +423,7 @@ configure(project(':core')) {
 
         implementation "org.openjfx:javafx-base:$javafxVersion:$os"
         implementation "org.openjfx:javafx-graphics:$javafxVersion:$os"
-        implementation("io.github.monero-ecosystem:monero-java:$moneroJavaVersion") {
+        implementation("io.github.woodser:monero-java:$moneroJavaVersion") {
             exclude(module: 'jackson-core')
             exclude(module: 'jackson-annotations')
             exclude(module: 'jackson-databind')
@@ -436,12 +440,12 @@ configure(project(':core')) {
         doLast {
             // get monero binaries download url
             Map moneroBinaries = [
-                'linux'         : 'https://github.com/haveno-dex/monero/releases/download/v0.18.3.1/monero-bins-haveno-linux.tar.gz',
-                'linux-sha256'  : '7f71294304b691fc136b72bebe72238f30e42e6d8db549d75dfbf53276a7a738',
-                'mac'           : 'https://github.com/haveno-dex/monero/releases/download/v0.18.3.1/monero-bins-haveno-mac.tar.gz',
-                'mac-sha256'    : 'b0f999dcc2721da20eec0be3cad79d0c362472c3901cad6d01555f5f0a5a7135',
-                'windows'       : 'https://github.com/haveno-dex/monero/releases/download/v0.18.3.1/monero-bins-haveno-windows.zip',
-                'windows-sha256': 'd02a4712e0b03320b8ee30a9830b2311d948bf8a1976f4bbf260a52aba12acb2'
+                'linux'         : 'https://github.com/haveno-dex/monero/releases/download/release1/monero-bins-haveno-linux.tar.gz',
+                'linux-sha256'  : '4020274ef546410f218c3c3a3c2a8c2c2cda3f653f8cc6fe8e3cd74334500489',
+                'mac'           : 'https://github.com/haveno-dex/monero/releases/download/release1/monero-bins-haveno-mac.tar.gz',
+                'mac-sha256'    : '72514caac499c4900c5cb6e957e5e3aaabba48968ae798c419f4559a51e5fc79',
+                'windows'       : 'https://github.com/haveno-dex/monero/releases/download/release1/monero-bins-haveno-windows.zip',
+                'windows-sha256': '27d8315d5da876e57fd12ed1c1d60a622763de99f0cc2521ce7f31c7fa4ab0ee'
             ]
 
             String osKey
@@ -580,7 +584,7 @@ configure(project(':desktop')) {
     apply plugin: 'com.github.johnrengelman.shadow'
     apply from: 'package/package.gradle'
 
-    version = '1.0.17-SNAPSHOT'
+    version = '1.0.19-SNAPSHOT'
 
     jar.manifest.attributes(
         "Implementation-Title": project.name,
@@ -641,7 +645,7 @@ configure(project(':desktop')) {
         testImplementation "org.junit.jupiter:junit-jupiter-api:$jupiterVersion"
         testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$jupiterVersion"
 
-        implementation("io.github.monero-ecosystem:monero-java:$moneroJavaVersion") {
+        implementation("io.github.woodser:monero-java:$moneroJavaVersion") {
             exclude(module: 'jackson-core')
             exclude(module: 'jackson-annotations')
             exclude(module: 'jackson-databind')
@@ -805,7 +809,7 @@ configure(project(':daemon')) {
         testImplementation "org.junit.jupiter:junit-jupiter-params:$jupiterVersion"
         testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$jupiterVersion")
 
-        implementation("io.github.monero-ecosystem:monero-java:$moneroJavaVersion") {
+        implementation("io.github.woodser:monero-java:$moneroJavaVersion") {
             exclude(module: 'jackson-core')
             exclude(module: 'jackson-annotations')
             exclude(module: 'jackson-databind')
